--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
         <div class="container px-6 py-12 mx-auto">
             <div class="flex">
-                <a href="#"> 
-                    <img class="logo" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
-                </a>
 
                 <div class="Sub"> 
 
                <h2> Subscribe to our newsletter for updates</h2>
-               <input type="text" id="email">
+               <input type="text" id="email"> 
                <button>Subscribe </button>
-
+               <a href="#https://www.codespace.co.za/"> 
+                <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="CodeSpace Logo">
+            </a>
+               
                </div>
 
                <div class="Quick"> 
