--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="sub"> 
 
                <h2 class="h2"> Subscribe to our newsletter for updates.</h2>
-               <input type="text" class="email" alt="Email Address"> 
+               <input type="text" placeholder="Email Address" class="email" alt="Email Address"> 
                <button class="btn">Subscribe </button>
                
      
