Added Href to Quick Links

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
                <h3 class="h3">Quick Link</h3>
                <ul class="list"> 
-                <li>Home</li>
-                <li>Who we are</li>
-                <li>Our Philosophy</li>
+                <li><a href="#Home"> Home </a></li>
+                <li><a href="#Who we are">  Who we are</a> </li>
+                <li><a href="#Our Philosophy"> Our Philosophy</a></li>
                </ul>
 
             </div>
